[gd_scene load_steps=15 format=2]

[ext_resource path="res://SharedAssets/MainTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://SharedAssets/PixelFontNormal.tres" type="DynamicFont" id=3]
[ext_resource path="res://Obstacles/Spikes.tscn" type="PackedScene" id=4]
[ext_resource path="res://Obstacles/ExitDoor.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/PlayerStatic.tscn" type="PackedScene" id=6]
[ext_resource path="res://SharedAssets/white_slash.png" type="Texture" id=7]
[ext_resource path="res://Obstacles/Coin.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/Level.gd" type="Script" id=9]
[ext_resource path="res://Levels/LevelFinishedUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player/DebugSpawn.tscn" type="PackedScene" id=11]
[ext_resource path="res://Levels/chippey.ogg" type="AudioStream" id=12]
[ext_resource path="res://SharedAssets/coin.png" type="Texture" id=13]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=14]

[node name="Level01" type="Node2D"]
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 1, -65524, 0, 1, -65523, 0, 1, -65522, 0, 1, -65521, 0, 1, -65520, 0, 1, -65519, 0, 1, -65518, 0, 1, -65517, 0, 1, -65516, 0, 1, -65515, 0, 1, -65514, 0, 1, -65513, 0, 1, -65512, 0, 1, -65511, 0, 1, -65510, 0, 1, -65509, 0, 1, -65508, 0, 1, -65507, 0, 1, -65506, 0, 1, -65505, 0, 1, -65504, 0, 1, -65503, 0, 1, -65502, 0, 1, -65501, 0, 1, -65500, 0, 1, -65499, 0, 1, -65498, 0, 1, -65497, 0, 1, -65496, 0, 1, -65495, 0, 1, -65494, 0, 1, -65493, 0, 1, -65492, 0, 1, -65491, 0, 1, -65490, 0, 1, -65489, 0, 1, -65488, 0, 1, -65487, 0, 1, -65486, 0, 1, -65485, 0, 1, -65484, 0, 1, -65483, 0, 1, -65482, 0, 1, -65481, 0, 1, -65480, 0, 1, -65479, 0, 1, -65478, 0, 1, -65477, 0, 1, -65476, 0, 1, -65475, 0, 1, -65474, 0, 1, -65473, 0, 1, -65472, 0, 1, -65471, 0, 1, -65470, 0, 2, 65535, 0, 65536, 0, 0, 131075, 1, 0, 131075, 2, 0, 131075, 3, 0, 131075, 4, 0, 131075, 5, 0, 131075, 6, 0, 131075, 7, 0, 131075, 8, 0, 131075, 9, 0, 131075, 10, 0, 131075, 11, 0, 131075, 12, 0, 131075, 13, 0, 131075, 14, 0, 131075, 15, 0, 131075, 16, 0, 131075, 17, 0, 131075, 18, 0, 131075, 19, 0, 131075, 20, 0, 131075, 21, 0, 131075, 22, 0, 131075, 23, 0, 131075, 24, 0, 131075, 25, 0, 131075, 26, 0, 131075, 27, 0, 131075, 28, 0, 131075, 29, 0, 131075, 30, 0, 131075, 31, 0, 131075, 32, 0, 131075, 33, 0, 131075, 34, 0, 131075, 35, 0, 131075, 36, 0, 131075, 37, 0, 131075, 38, 0, 131075, 39, 0, 131075, 40, 0, 65537, 41, 0, 131075, 42, 0, 131075, 43, 0, 131075, 44, 0, 131075, 45, 0, 131075, 46, 0, 131075, 47, 0, 131075, 48, 0, 131075, 49, 0, 131075, 50, 0, 131075, 51, 0, 131075, 52, 0, 65537, 53, 0, 131075, 54, 0, 3, 55, 0, 131073, 56, 0, 131073, 57, 0, 131073, 58, 0, 131073, 59, 0, 131073, 60, 0, 131073, 61, 0, 131073, 62, 0, 131073, 63, 0, 131073, 64, 0, 131073, 65, 0, 4, 66, 0, 65538, 131071, 0, 65536, 65536, 0, 131075, 65537, 0, 131075, 65538, 0, 131075, 65539, 0, 131075, 65540, 0, 131075, 65541, 0, 131075, 65542, 0, 131075, 65543, 0, 131075, 65544, 0, 131075, 65545, 0, 131075, 65546, 0, 131075, 65547, 0, 131075, 65548, 0, 131075, 65549, 0, 131075, 65550, 0, 131075, 65551, 0, 131075, 65552, 0, 131075, 65553, 0, 131075, 65554, 0, 131075, 65555, 0, 131075, 65556, 0, 131075, 65557, 0, 131075, 65558, 0, 131075, 65559, 0, 131075, 65560, 0, 131075, 65561, 0, 131075, 65562, 0, 131075, 65563, 0, 131075, 65564, 0, 131075, 65565, 0, 131075, 65566, 0, 131075, 65567, 0, 131075, 65568, 0, 131075, 65569, 0, 131075, 65570, 0, 131075, 65571, 0, 131075, 65572, 0, 65537, 65573, 0, 131075, 65574, 0, 131075, 65575, 0, 131075, 65576, 0, 131075, 65577, 0, 131075, 65578, 0, 131075, 65579, 0, 131075, 65580, 0, 131075, 65581, 0, 131075, 65582, 0, 131075, 65583, 0, 131075, 65584, 0, 131075, 65585, 0, 131075, 65586, 0, 131075, 65587, 0, 131075, 65588, 0, 131075, 65589, 0, 131075, 65590, 0, 65538, 65594, 6, 0, 65601, 0, 65536, 65602, 0, 65538, 196607, 0, 65536, 131072, 0, 131075, 131073, 0, 131075, 131074, 0, 131075, 131075, 0, 131075, 131076, 0, 131075, 131077, 0, 131075, 131078, 0, 131075, 131079, 0, 131075, 131080, 0, 131075, 131081, 0, 131075, 131082, 0, 131075, 131083, 0, 131075, 131084, 0, 131075, 131085, 0, 131075, 131086, 0, 131075, 131087, 0, 131075, 131088, 0, 131075, 131089, 0, 131075, 131090, 0, 131075, 131091, 0, 131075, 131092, 0, 131075, 131093, 0, 131075, 131094, 0, 131075, 131095, 0, 131075, 131096, 0, 131075, 131097, 0, 131075, 131098, 0, 131075, 131099, 0, 131075, 131100, 0, 131075, 131101, 0, 131075, 131102, 0, 131075, 131103, 0, 131075, 131104, 0, 131075, 131105, 0, 131075, 131106, 0, 131075, 131107, 0, 131075, 131108, 0, 131075, 131109, 0, 131075, 131110, 0, 131075, 131111, 0, 131075, 131112, 0, 131075, 131113, 0, 131075, 131114, 0, 131075, 131115, 0, 131075, 131116, 0, 131075, 131117, 0, 131075, 131118, 0, 131075, 131119, 0, 131075, 131120, 0, 131075, 131121, 0, 131075, 131122, 0, 131075, 131123, 0, 131075, 131124, 0, 131075, 131125, 0, 131075, 131126, 0, 65538, 131130, 6, 0, 131136, 5, 0, 131137, 0, 65536, 131138, 0, 65538, 262143, 0, 65536, 196608, 0, 131075, 196609, 0, 131075, 196610, 0, 131075, 196611, 0, 131075, 196612, 0, 131075, 196613, 0, 131075, 196614, 0, 131075, 196615, 0, 131075, 196616, 0, 131075, 196617, 0, 131075, 196618, 0, 131075, 196619, 0, 131075, 196620, 0, 131075, 196621, 0, 131075, 196622, 0, 131075, 196623, 0, 131075, 196624, 0, 131075, 196625, 0, 131075, 196626, 0, 131075, 196627, 0, 131075, 196628, 0, 131075, 196629, 0, 131075, 196630, 0, 131075, 196631, 0, 131075, 196632, 0, 131075, 196633, 0, 131075, 196634, 0, 131075, 196635, 0, 131075, 196636, 0, 131075, 196637, 0, 131075, 196638, 0, 131075, 196639, 0, 131075, 196640, 0, 131075, 196641, 0, 131075, 196642, 0, 131075, 196643, 0, 131075, 196644, 0, 131075, 196645, 0, 131075, 196646, 0, 131075, 196647, 0, 131075, 196648, 0, 131075, 196649, 0, 131075, 196650, 0, 131075, 196651, 0, 131075, 196652, 0, 131075, 196653, 0, 131075, 196654, 0, 131075, 196655, 0, 131075, 196656, 0, 131075, 196657, 0, 131075, 196658, 0, 131075, 196659, 0, 131075, 196660, 0, 131075, 196661, 0, 3, 196662, 0, 131074, 196666, 7, 0, 196671, 0, 0, 196672, 0, 1, 196673, 0, 65540, 196674, 0, 65538, 327679, 0, 65536, 262144, 0, 3, 262145, 0, 131073, 262146, 0, 131073, 262147, 0, 131073, 262148, 0, 131073, 262149, 0, 131073, 262150, 0, 131073, 262151, 0, 131073, 262152, 0, 131073, 262153, 0, 131073, 262154, 0, 131073, 262155, 0, 131073, 262156, 0, 131073, 262157, 0, 131073, 262158, 0, 131073, 262159, 0, 131073, 262160, 0, 131073, 262161, 0, 131073, 262162, 0, 131073, 262163, 0, 131073, 262164, 0, 131073, 262165, 0, 131073, 262166, 0, 131073, 262167, 0, 131073, 262168, 0, 131073, 262169, 0, 131073, 262170, 0, 131073, 262171, 0, 131073, 262172, 0, 131073, 262173, 0, 4, 262174, 0, 65537, 262175, 0, 131075, 262176, 0, 131075, 262177, 0, 131075, 262178, 0, 131075, 262179, 0, 131075, 262180, 0, 131075, 262181, 0, 131075, 262182, 0, 131075, 262183, 0, 131075, 262184, 0, 131075, 262185, 0, 65537, 262186, 0, 131075, 262187, 0, 131075, 262188, 0, 131075, 262189, 0, 131075, 262190, 0, 131075, 262191, 0, 131075, 262192, 0, 131075, 262193, 0, 131075, 262194, 0, 65537, 262195, 0, 131075, 262196, 0, 131075, 262197, 0, 65538, 262202, 6, 0, 262207, 0, 131072, 262208, 0, 131073, 262209, 0, 4, 262210, 0, 65538, 393215, 0, 65536, 327680, 0, 65538, 327709, 0, 65536, 327710, 0, 131075, 327711, 0, 131075, 327712, 0, 131075, 327713, 0, 131075, 327714, 0, 131075, 327715, 0, 131075, 327716, 0, 131075, 327717, 0, 131075, 327718, 0, 131075, 327719, 0, 3, 327720, 0, 131073, 327721, 0, 131073, 327722, 0, 131073, 327723, 0, 131073, 327724, 0, 131073, 327725, 0, 131073, 327726, 0, 131073, 327727, 0, 131073, 327728, 0, 131073, 327729, 0, 131073, 327730, 0, 131073, 327731, 0, 4, 327732, 0, 65537, 327733, 0, 65538, 327737, 0, 0, 327738, 0, 1, 327739, 2, 0, 327745, 0, 65536, 327746, 0, 65538, 458751, 0, 65536, 393216, 0, 65538, 393245, 0, 65536, 393246, 0, 131075, 393247, 0, 131075, 393248, 0, 131075, 393249, 0, 131075, 393250, 0, 131075, 393251, 0, 131075, 393252, 0, 131075, 393253, 0, 131075, 393254, 0, 131075, 393255, 0, 65538, 393267, 0, 65536, 393268, 0, 131075, 393269, 0, 65538, 393273, 0, 65536, 393274, 0, 131075, 393275, 0, 65538, 393281, 0, 65536, 393282, 0, 65538, 524287, 0, 65536, 458752, 0, 65538, 458781, 0, 65536, 458782, 0, 131075, 458783, 0, 131075, 458784, 0, 65537, 458785, 0, 131075, 458786, 0, 131075, 458787, 0, 131075, 458788, 0, 131075, 458789, 0, 131075, 458790, 0, 131075, 458791, 0, 65538, 458803, 0, 65536, 458804, 0, 131075, 458805, 0, 65538, 458806, 5, 0, 458809, 0, 131072, 458810, 0, 4, 458811, 0, 65538, 458817, 0, 65536, 458818, 0, 65538, 589823, 0, 65536, 524288, 0, 65538, 524317, 0, 65536, 524318, 0, 131075, 524319, 0, 131075, 524320, 0, 131075, 524321, 0, 131075, 524322, 0, 131075, 524323, 0, 131075, 524324, 0, 131075, 524325, 0, 65537, 524326, 0, 131075, 524327, 0, 65538, 524339, 0, 65536, 524340, 0, 65537, 524341, 0, 65539, 524342, 0, 2, 524346, 0, 65536, 524347, 0, 65538, 524353, 0, 65536, 524354, 0, 65538, 655359, 0, 65536, 589824, 0, 65538, 589842, 5, 0, 589853, 0, 65536, 589854, 0, 65537, 589855, 0, 131075, 589856, 0, 131075, 589857, 0, 131075, 589858, 0, 3, 589859, 0, 131073, 589860, 0, 131073, 589861, 0, 4, 589862, 0, 131075, 589863, 0, 65538, 589875, 0, 65536, 589876, 0, 131075, 589877, 0, 131075, 589878, 0, 65538, 589882, 0, 65536, 589883, 0, 65538, 589889, 0, 65536, 589890, 0, 65538, 720895, 0, 65536, 655360, 0, 65538, 655377, 0, 0, 655378, 0, 2, 655389, 0, 131072, 655390, 0, 131073, 655391, 0, 131073, 655392, 0, 131073, 655393, 0, 131073, 655394, 0, 131074, 655397, 0, 131072, 655398, 0, 131073, 655399, 0, 131074, 655411, 0, 131072, 655412, 0, 131073, 655413, 0, 131073, 655414, 0, 131074, 655418, 0, 65536, 655419, 0, 65538, 655425, 0, 65536, 655426, 0, 65538, 786431, 0, 65536, 720896, 0, 65538, 720911, 5, 0, 720913, 0, 65536, 720914, 0, 65538, 720940, 0, 0, 720941, 0, 1, 720942, 0, 2, 720949, 6, 0, 720953, 0, 0, 720954, 0, 65540, 720955, 0, 65538, 720961, 0, 65536, 720962, 0, 65538, 851967, 0, 65536, 786432, 0, 65538, 786441, 0, 0, 786442, 0, 1, 786443, 0, 2, 786447, 0, 0, 786448, 0, 1, 786449, 0, 65540, 786450, 0, 65538, 786454, 0, 0, 786455, 0, 2, 786461, 0, 0, 786462, 0, 2, 786465, 0, 0, 786466, 0, 2, 786469, 0, 0, 786470, 0, 2, 786476, 0, 65536, 786477, 0, 131075, 786478, 0, 65538, 786485, 7, 0, 786489, 0, 65536, 786490, 0, 131075, 786491, 0, 65538, 786497, 0, 65536, 786498, 0, 65538, 917503, 0, 65536, 851968, 0, 65538, 851969, 5, 0, 851970, 5, 0, 851975, 5, 0, 851977, 0, 65536, 851978, 0, 131075, 851979, 0, 65538, 851983, 0, 65536, 851984, 0, 65537, 851985, 0, 131075, 851986, 0, 65538, 851990, 0, 65536, 851991, 0, 65538, 851996, 5, 0, 851997, 0, 65536, 851998, 0, 65538, 852001, 0, 65536, 852002, 0, 65538, 852005, 0, 65536, 852006, 0, 65538, 852010, 5, 0, 852011, 5, 0, 852012, 0, 65536, 852013, 0, 131075, 852014, 0, 65538, 852015, 5, 0, 852020, 5, 0, 852021, 6, 0, 852025, 0, 65536, 852026, 0, 65537, 852027, 0, 65538, 852033, 0, 65536, 852034, 0, 65538, 983039, 0, 65536, 917504, 0, 65539, 917505, 0, 1, 917506, 0, 1, 917507, 0, 1, 917508, 0, 1, 917509, 0, 1, 917510, 0, 1, 917511, 0, 1, 917512, 0, 1, 917513, 0, 65540, 917514, 0, 65537, 917515, 0, 65539, 917516, 0, 1, 917517, 0, 1, 917518, 0, 1, 917519, 0, 65540, 917520, 0, 65537, 917521, 0, 131075, 917522, 0, 65539, 917523, 0, 1, 917524, 0, 1, 917525, 0, 1, 917526, 0, 65540, 917527, 0, 65539, 917528, 0, 1, 917529, 0, 1, 917530, 0, 1, 917531, 0, 1, 917532, 0, 1, 917533, 0, 65540, 917534, 0, 65539, 917535, 0, 1, 917536, 0, 1, 917537, 0, 65540, 917538, 0, 65539, 917539, 0, 1, 917540, 0, 1, 917541, 0, 65540, 917542, 0, 65539, 917543, 0, 1, 917544, 0, 1, 917545, 0, 1, 917546, 0, 1, 917547, 0, 1, 917548, 0, 65540, 917549, 0, 131075, 917550, 0, 65539, 917551, 0, 1, 917552, 0, 1, 917553, 0, 1, 917554, 0, 1, 917555, 0, 1, 917556, 0, 1, 917557, 0, 1, 917558, 0, 1, 917559, 0, 1, 917560, 0, 1, 917561, 0, 65540, 917562, 0, 65537, 917563, 0, 65539, 917564, 0, 1, 917565, 0, 1, 917566, 0, 1, 917567, 0, 1, 917568, 0, 1, 917569, 0, 65540, 917570, 0, 65538, 1048575, 0, 131072, 983040, 0, 131073, 983041, 0, 131073, 983042, 0, 131073, 983043, 0, 131073, 983044, 0, 131073, 983045, 0, 131073, 983046, 0, 131073, 983047, 0, 131073, 983048, 0, 131073, 983049, 0, 131073, 983050, 0, 131073, 983051, 0, 131073, 983052, 0, 131073, 983053, 0, 131073, 983054, 0, 131073, 983055, 0, 131073, 983056, 0, 131073, 983057, 0, 131073, 983058, 0, 131073, 983059, 0, 131073, 983060, 0, 131073, 983061, 0, 131073, 983062, 0, 131073, 983063, 0, 131073, 983064, 0, 131073, 983065, 0, 131073, 983066, 0, 131073, 983067, 0, 131073, 983068, 0, 131073, 983069, 0, 131073, 983070, 0, 131073, 983071, 0, 131073, 983072, 0, 131073, 983073, 0, 131073, 983074, 0, 131073, 983075, 0, 131073, 983076, 0, 131073, 983077, 0, 131073, 983078, 0, 131073, 983079, 0, 131073, 983080, 0, 131073, 983081, 0, 131073, 983082, 0, 131073, 983083, 0, 131073, 983084, 0, 131073, 983085, 0, 131073, 983086, 0, 131073, 983087, 0, 131073, 983088, 0, 131073, 983089, 0, 131073, 983090, 0, 131073, 983091, 0, 131073, 983092, 0, 131073, 983093, 0, 131073, 983094, 0, 131073, 983095, 0, 131073, 983096, 0, 131073, 983097, 0, 131073, 983098, 0, 131073, 983099, 0, 131073, 983100, 0, 131073, 983101, 0, 131073, 983102, 0, 131073, 983103, 0, 131073, 983104, 0, 131073, 983105, 0, 131073, 983106, 0, 131074 )
__meta__ = {
"_edit_lock_": true
}

[node name="JumpText" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 80.0
margin_top = 120.0
margin_right = 144.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 3 )
text = "Z"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStatic" parent="JumpText" instance=ExtResource( 6 )]
position = Vector2( 32, 28 )

[node name="Sprite" parent="JumpText/PlayerStatic/Body" index="0"]
position = Vector2( 0, 2 )
frame = 3

[node name="RightHand" parent="JumpText/PlayerStatic/Body" index="1"]
region_rect = Rect2( 61, 9, 2, 2 )

[node name="RightFan" parent="JumpText/PlayerStatic/Body/RightHand" index="0"]
position = Vector2( 5.5, -4.5 )
rotation = 0.785398

[node name="LeftHand" parent="JumpText/PlayerStatic/Body" index="2"]
position = Vector2( -6, 4 )
region_rect = Rect2( 49, 9, 2, 2 )

[node name="LeftFan" parent="JumpText/PlayerStatic/Body/LeftHand" index="0"]
position = Vector2( -5.5, -4.5 )
rotation = -0.785398

[node name="FanAttackSound" parent="JumpText/PlayerStatic" index="9"]
volume_db = -12.0

[node name="Footstep" parent="JumpText/PlayerStatic" index="11"]
volume_db = -16.0

[node name="JumpSound" parent="JumpText/PlayerStatic" index="13"]
volume_db = -10.0

[node name="AttackText" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 360.0
margin_top = 120.0
margin_right = 456.0
margin_bottom = 172.0
custom_fonts/font = ExtResource( 3 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="AttackText"]
position = Vector2( 64, 24 )
rotation = 0.785397
texture = ExtResource( 7 )

[node name="PlayerStatic" parent="AttackText" instance=ExtResource( 6 )]
position = Vector2( 35, 20 )
collision_mask = 0

[node name="DownAttackText" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 656.0
margin_top = 104.0
margin_right = 800.0
margin_bottom = 167.0
custom_fonts/font = ExtResource( 3 )
text = "DOWN + Xq"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStatic" parent="DownAttackText" instance=ExtResource( 6 )]
position = Vector2( 72, 24 )

[node name="RightHand" parent="DownAttackText/PlayerStatic/Body" index="1"]
position = Vector2( 0, 6 )

[node name="RightFan" parent="DownAttackText/PlayerStatic/Body/RightHand" index="0"]
position = Vector2( 0, 6 )
rotation = 3.14159

[node name="LeftHand" parent="DownAttackText/PlayerStatic/Body" index="2"]
position = Vector2( 0, 8 )

[node name="LeftFan" parent="DownAttackText/PlayerStatic/Body/LeftHand" index="0"]
position = Vector2( 0, 4 )
rotation = -3.14159

[node name="FanAttackSound" parent="DownAttackText/PlayerStatic" index="9"]
volume_db = -12.0

[node name="Footstep" parent="DownAttackText/PlayerStatic" index="11"]
volume_db = -16.0

[node name="JumpSound" parent="DownAttackText/PlayerStatic" index="13"]
volume_db = -10.0

[node name="Sprite2" type="Sprite" parent="DownAttackText"]
position = Vector2( 72, 49 )
rotation = 2.35619
texture = ExtResource( 7 )

[node name="Coin3" parent="." instance=ExtResource( 8 )]
position = Vector2( 1027, 32 )
coin_index = 2

[node name="Coin1" parent="." instance=ExtResource( 8 )]
position = Vector2( 344, 136 )

[node name="Coin2" parent="." instance=ExtResource( 8 )]
position = Vector2( 800, 128 )
coin_index = 1

[node name="ExitDoor" parent="." instance=ExtResource( 5 )]
position = Vector2( 1003, 224 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 64, 216 )

[node name="Camera2D" parent="Player" index="7"]
limit_left = 0
limit_right = 1056
editor_draw_limits = true

[node name="SpikeNodes" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes" parent="SpikeNodes" instance=ExtResource( 4 )]
position = Vector2( 312, 216 )

[node name="Spikes2" parent="SpikeNodes" instance=ExtResource( 4 )]
position = Vector2( 328, 216 )

[node name="Spikes3" parent="SpikeNodes" instance=ExtResource( 4 )]
position = Vector2( 344, 216 )

[node name="Spikes4" parent="SpikeNodes" instance=ExtResource( 4 )]
position = Vector2( 504, 216 )

[node name="Spikes5" parent="SpikeNodes" instance=ExtResource( 4 )]
position = Vector2( 520, 216 )

[node name="Spikes8" parent="SpikeNodes" instance=ExtResource( 4 )]
position = Vector2( 568, 216 )

[node name="Spikes9" parent="SpikeNodes" instance=ExtResource( 4 )]
position = Vector2( 584, 216 )

[node name="Spikes6" parent="SpikeNodes" instance=ExtResource( 4 )]
position = Vector2( 568, 168 )
rotation = 3.14159

[node name="Spikes7" parent="SpikeNodes" instance=ExtResource( 4 )]
position = Vector2( 584, 168 )
rotation = 3.14159

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="CoinSlots" type="Node2D" parent="UILayer"]

[node name="Slots" type="HBoxContainer" parent="UILayer/CoinSlots"]
margin_left = 8.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="TextureRect" parent="UILayer/CoinSlots/Slots"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 16.0
margin_bottom = 40.0
texture = ExtResource( 13 )

[node name="Slot2" type="TextureRect" parent="UILayer/CoinSlots/Slots"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 20.0
margin_right = 36.0
margin_bottom = 40.0
texture = ExtResource( 13 )

[node name="Slot3" type="TextureRect" parent="UILayer/CoinSlots/Slots"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 40.0
margin_right = 56.0
margin_bottom = 40.0
texture = ExtResource( 13 )

[node name="LevelFinishedUI" parent="UILayer" instance=ExtResource( 10 )]

[node name="PauseMenu" parent="UILayer" instance=ExtResource( 14 )]

[node name="DebugSpawn" parent="." instance=ExtResource( 11 )]
position = Vector2( 432, 196 )
warp_enabled = true

[node name="DebugSpawn2" parent="." instance=ExtResource( 11 )]
position = Vector2( 872, 200 )
warp_enabled = true

[node name="ThemeSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0
[connection signal="collected" from="Coin3" to="." method="_on_coin_collected"]
[connection signal="collected" from="Coin1" to="." method="_on_coin_collected"]
[connection signal="collected" from="Coin2" to="." method="_on_coin_collected"]

[editable path="JumpText/PlayerStatic"]

[editable path="DownAttackText/PlayerStatic"]

[editable path="Player"]
